# fastmcp-quickstart-template

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  echo.py  pyproject.toml  pyrightconfig.json  ruff.toml
src/server/: __init__.py  app.py  settings.py
src/server/prompts/: echo.py
src/server/resources/: echo.py
src/server/tools/: echo.py  fs_read.py  http_fetch.py  validated.py
tests/: conftest.py  test_echo.py  test_examples.py
