[project]
name = "fastmcp-quickstart-template"
version = "0.1.0"
description = "FastMCP Cloud-first quickstart template (agent-ready)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "pyright>=1.1.380",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["server"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = "error"

